# llvm-clang

./: Makefile.config  Makefile.llvmbuild  config.status
Release+Asserts/lib/: .dir
docs/: doxygen.cfg
include/llvm/: InitializePasses.h
include/llvm/Config/: config.h  config.h.bak  config.h.bak2  llvm-config.h
include/llvm/IR/: .dir
include/llvm/Transforms/: Instrumentation.h  Instrumentation.h~
lib/Transforms/Instrumentation/: DepProfiler.h  Instrumentation.cpp  LoopFinder.cpp  Makefile  MemoryProfiling.cpp  configure.out  runtime.cpp
lib/Transforms/Juan/: Makefile  configure.out
lib/Transforms/Vectorize/: LoopVectorize.cpp~
lib/Transforms/p2llvmTemplate/: CMakeLists.txt  configure
lib/Transforms/p2llvmTemplate/autoconf/: configure.ac
lib/Transforms/p2llvmTemplate/include/: DepProfiler.h  DepProfiler.h~
lib/Transforms/p2llvmTemplate/lib/: CMakeLists.txt  Makefile
lib/Transforms/p2llvmTemplate/lib/prof-inst/: CMakeLists.txt  DepProfiler.cpp  DepProfiler.cpp~  Makefile
lib/Transforms/p2llvmTemplate/lib/prof-rt/: CMakeLists.txt  Makefile
lib/Transforms/p2llvmTemplate/tools/: CMakeLists.txt  Makefile
lib/Transforms/p2llvmTemplate/tools/depprof/: CMakeLists.txt  Makefile  config.h.cmake  config.h.in  main.cpp
projects/sample/: Makefile.common  config.status
runtime/libprofile/: Makefile  MemoryProfiling.c  MemoryProfiling.cpp  MemoryProfiling.cpp~  MemoryProfiling.c~  configure.out  dablooms.c~  dablooms.h~
runtime/libprofile/Release+Asserts/: .dir  BasicBlockTracing.d  CommonProfiling.d  EdgeProfiling.d  MemoryProfiling.d  OptimalEdgeProfiling.d  PathProfiling.d  dablooms.d  murmur.d
tools/clang/docs/: doxygen.cfg
tools/clang/docs/tools/: clang.1  clang.html  clang.ps
tools/clang/include/clang/AST/: StmtNodes.inc  StmtOpenMP.h  StmtOpenMP.h~
tools/clang/include/clang/Basic/: DiagnosticCommentKinds.inc  DiagnosticCommonKinds.inc  DiagnosticDriverKinds.inc  DiagnosticGroups.inc  DiagnosticIndexName.inc  DiagnosticLexKinds.inc  DiagnosticParseKinds.inc  DiagnosticSemaKinds.inc  OpenMPKinds.def  OpenMPKinds.def~  (+2 more)
tools/clang/lib/AST/: StmtPrinter.cpp
tools/clang/lib/Basic/: .OpenMPKinds.cpp.swp
tools/clang/lib/CodeGen/: CGStmtOpenMP.cpp  CGStmtOpenMP.cpp~  CodeGenFunction.cpp  CodeGenFunction.cpp~  CodeGenFunction.h  CodeGenFunction.h~  CodeGenModule.cpp  CodeGenModule.cpp~  CodeGenModule.h  CodeGenModule.h~
tools/clang/lib/Parse/: ParseOpenMP.cpp  ParseOpenMP.cpp~  ParsePragma.cpp  ParsePragma.h  ParseStmt.cpp~  Parser.cpp
tools/clang/lib/Sema/: SemaOpenMP.cpp  SemaOpenMP.cpp~  TreeTransform.h  TreeTransform.h~
tools/clang/lib/Serialization/: ASTReaderStmt.cpp  ASTWriterStmt.cpp
tools/clang/test/: lit.site.cfg
tools/clang/test/Unit/: lit.site.cfg
unittests/ExecutionEngine/JIT/: .dir
(+3 files in other folders)
